<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AyeSAP</string>
    <string name="pickup_activity_name">Pickup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="emailmobHint">Email Id / Mobile No.</string>
    <string name="emailHint">Email Id</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="forgotPassword"><u>Forgot Password ?</u></string>
    <string name="registerText01">I Don\'t have an account, </string>
    <string name="registerText02"><u>Register me</u></string>
    <string name="fullNameHint">Full Name</string>
    <string name="mobileNumberHint">Mobile No.</string>
    <string name="registerButton">Register</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="logoutButton">Logout</string>
    <string name="bookNowButton">BOOK NOW</string>
    <string name="nearestNotif">No rider nearby</string>
    <string name="timeLeft"> min from now</string>
    <string name="maxOrder">Maximum order value is Rs. 3000</string>
    <string name="skipDetails">Skip order details for now</string>
    <string name="amountHint">2,500</string>
    <string name="amountCollectedHint">Amount to be collected</string>
    <string name="custMobNoHint">Customer mobile number</string>
    
    <string name="localitySpinner">Locality</string>
    <string-array name="localityOptions">
        <item>Locality</item>
        <item>Locality 1</item>
        <item>Locality 2</item>
        <item>Locality 3</item>
        <item>Locality 4</item>
        <item>Locality 5</item>
        <item>Locality 6</item>
        <item>Locality 7</item>
        <item>Locality 8</item>
        <item>Locality 9</item>
        <item>Locality 10</item>        
    </string-array>
    
    <string name="subLocalitySpinner">Sub-locality</string>
    <string-array name="subLocalityOptions">
        <item>Sub-Locality</item>
        <item>Sub-Locality 1</item>
        <item>Sub-Locality 2</item>
        <item>Sub-Locality 3</item>
        <item>Sub-Locality 4</item>
        <item>Sub-Locality 5</item>
        <item>Sub-Locality 6</item>
        <item>Sub-Locality 7</item>
        <item>Sub-Locality 8</item>
        <item>Sub-Locality 9</item>
        <item>Sub-Locality 10</item>        
    </string-array>
    
    <string name="customerAdd">Customer Address (Optional)</string>
    <string name="noNetworkError">Please connect to the internet!</string>
    <string name="changePassword">Change Password</string>
    
    <string name="oldPasswordHint">Old Password</string>
    <string name="newPasswordHint">New Password</string>
    <string name="reenterPasswordHint">Verify Password</string>
    <string name="submitPassword">Change Password</string>
    
    <string name="customerStreet">Street (Optional)</string>
    <string name="customerArea">Area (Optional)</string>
    <string name="customerCity">City(Optional)</string>
    <string name="customerPincode">Pincode (Optional)</string>
    <string name="customerName">Customer Name (Optional)</string>
    
    <string name="comingSoon">Coming Soon!</string>
    
    <string name="noOfShip">Number of shipments</string>
    
</resources>
