<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="1dp" >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" >
    </include>

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/underline_edittext"
        android:ems="10"
        android:hint="@string/oldPasswordHint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/editTextPadding" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/underline_edittext"
        android:ems="10"
        android:hint="@string/newPasswordHint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/editTextPadding" />

    <EditText
        android:id="@+id/reenterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/underline_edittext"
        android:ems="10"
        android:hint="@string/reenterPasswordHint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/editTextPadding" />

    <Button
        android:id="@+id/submitPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reenterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/changePassword"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>