<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.retailerapp.MainActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logoWidth"
        android:layout_height="@dimen/logoHeight"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logoTop"
        android:src="@drawable/logoblue" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logoBottom"
        android:background="@drawable/underline_edittext"
        android:ems="10"
        android:hint="@string/fullNameHint"
        android:inputType="text"
        android:paddingLeft="@dimen/editTextPadding" />

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fullName"
        android:layout_alignRight="@+id/fullName"
        android:layout_below="@+id/fullName"
        android:layout_marginTop="20dp"
        android:background="@drawable/underline_edittext"
        android:ems="10"
        android:hint="@string/mobileNumberHint"
        android:inputType="phone"
        android:paddingLeft="@dimen/editTextPadding" >
    </EditText>

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mobileNumber"
        android:layout_alignRight="@+id/mobileNumber"
        android:layout_below="@+id/mobileNumber"
        android:layout_marginTop="20dp"
        android:background="@drawable/underline_edittext"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/editTextPadding" >
    </EditText>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/regButtonBottom"
        android:background="@drawable/button"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/registerButton"
        android:textColor="@color/white" />

</RelativeLayout>